:lipstick: Fix color contrast about me

--- a/resources/public/css/_home.scss
+++ b/resources/public/css/_home.scss
@@ -46,7 +46,7 @@
         align-items: center;
 
         h2 {
-            color: $color-primary-3;
+            color: $color-primary-4;
             margin-bottom: 0;
         }
 
